scenarios/argocd/fakenodes/k3s/istio/virtual-services/istio-vs-ssl-term-vcluster-k3s-123.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-k3s-123
  namespace: k3s
spec:
  hosts:
  - "vcluster-k3s.172.27.0.3.nip.io"
  gateways:
  - istio-ingress/vcluster-k3s
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-k3s.172.27.0.3.nip.io"
    route:
    - destination:
        host: "vcluster-k3s-123"
        port:
          number: 443
      weight: 100
