scenarios/argocd/fakenodes/k3s/istio/virtual-services/vs-vcluster-k3s-122.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-k3s-122
  namespace: k3s
spec:
  hosts:
  - "vcluster-k3s-122.172.27.0.3.nip.io"
  gateways:
  - istio-ingress/vcluster-k3s
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-k3s-122.172.27.0.3.nip.io"
    route:
    - destination:
        host: vcluster-k3s-122
        port:
          number: 443
